<resources>
    <string name="app_name">Final_Mobile_Device_Programming</string>
    <string name="action_settings">Settings</string>
    <string name="lblDirection">Create a group by entering their names and mobile numbers.</string>
    <string name="txtNamelbl">Name</string>
    <string name="txtPhonelbl">Phone</string>
    <string name="btnSubmit">Add Person</string>
    <string name="btnNxtScreen">Meet Your Group</string>
    <string name="title_activity_generate_group">generateGroup</string>
    <string name="lblGroupIntro">Your group contains the following people: </string>
    <string name="btnTrack">Find your Location</string>
    <string name="btnMessage">Message Your Group</string>
    <string name="btnHome">Home</string>
    <string name="btnBackGenerateGroup">Back to Generate Group</string>
    <string name="putTxt">Craft Message to the Group Here</string>
    <string name="btnSend">Send Message</string>
    <string name="receivedTxt">This is a sample message</string>
    <string name="sendTxt">This is a sent sample message</string>
    <string name="senderName">Abby</string>
    <item name="editText" type="id" />
    <string name="title_maps">This is where you are: </string>
    <string name="google_maps_key">AIzaSyD6v9LTNPqgnB53VFt43Z6cbJUZuR5HR5w</string>
    <string name="placeholder_message">Message goes here</string>
    <string name="map_add">Add</string>
    <string name="map_locate">Locate</string>
    <string name="map_clear">Clear</string>
</resources>
