<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="67dp" >

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="34dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="90dp" />

            <TextView
                android:id="@+id/received_message_body"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:background="@drawable/received_message"
                android:elevation="21dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="26dp"
                android:paddingEnd="60dp"
                android:paddingStart="60dp"
                android:text="@string/receivedTxt"
                android:textSize="18sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/sent_message_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/message_format"
                android:elevation="2dp"
                android:padding="10dp"
                android:text="@string/placeholder_message"
                android:textColor="#fff"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/putTxt"
                android:inputType="textMultiLine"
                android:autofillHints="" tools:targetApi="o" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSend" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnHome" />

            <Button
                android:id="@+id/btnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnTrack" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>