<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintVertical_chainStyle="packed"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/Linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDirection"
            android:textSize="18sp"
            app:fontFamily="serif" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSubmit"
            app:fontFamily="serif" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNxtScreen"
            app:fontFamily="serif"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgFriend"
        android:layout_width="381dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Linear_Layout"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/imgfinalfriend"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>